@@ -262,6 +262,21 @@
  *        targets lacking an ADC.</i></td>  
  *   </tr>
  *   <tr>
+ *    <td>VTARGET_REF_VOLTS</td>
+ *    <td>Makefile CDEFS</td>
+ *    <td>Indicates the programmer AVR's AVCC reference voltage when measuring the target's supply voltage. Note that the supply
+ *        voltage should never exceed the reference voltage on the programmer AVR without some form of protection to prevent damage
+ *        to the ADC. <i>Ignored when compiled for targets lacking an ADC, or when NO_VTARGET_DETECT is defined.</i></td>  
+ *   </tr>
+ *   <tr>
+ *    <td>VTARGET_SCALE_FACTOR</td>
+ *    <td>Makefile CDEFS</td>
+ *    <td>Indicates the target's supply voltage scale factor when applied to the ADC. A simple resistive divider can be used on the
+ *        ADC pin for measuring the target's supply voltage, so that voltages above the programmer AVR's AVCC reference voltage can be
+ *        measured. This should be the reciprocal of the division performed - e.g. if the VTARGET voltage is halved, this should be set
+ *        to 2. <i>Ignored when compiled for targets lacking an ADC, or when NO_VTARGET_DETECT is defined.</i></td>  
+ *   </tr> 
+ *   <tr>
  *    <td>LIBUSB_DRIVER_COMPAT</td>
  *    <td>Makefile CDEFS</td>
  *    <td>Define to switch to a non-standard endpoint scheme, breaking compatibility with AVRStudio under Windows but making
