@@ -201,6 +201,8 @@ CDEFS += -DAUX_LINE_PIN=PINB
 CDEFS += -DAUX_LINE_DDR=DDRB
 CDEFS += -DAUX_LINE_MASK="(1 << 4)"
 CDEFS += -DVTARGET_ADC_CHANNEL=2
+CDEFS += -DVTARGET_REF_VOLTS=3.3
+CDEFS += -DVTARGET_SCALE_FACTOR=2
 #CDEFS += -DLIBUSB_DRIVER_COMPAT
 
 
